# DeepSleepNet

./: .gitignore  README.md  common.py  main.py  preprocessing.py  pyproject.toml  utils.py
datasets/: __init__.py  dataset.py
models/: __init__.py  losses.py  model.py
preprocessing/: __init__.py  preprocessing.py
scripts/: analyze_data.py  download_data.py  evaluate.py  explore_data.py  plot_hypnogram.py  run_preprocessing.py  train.py  visualize_metrics.py
src/: download_data.py  explore_data.py  plot_hypnogram.py
tests/: __init__.py  test_dataset.py  test_model.py  test_preprocessing.py  test_training.py
